# ssl-relation-prediction

./: .gitignore  pyproject.toml  setup.py
src/: preprocess_datasets.py
src/src_data/oregano/: test  valid
ssl_relation_prediction.egg-info/: PKG-INFO  SOURCES.txt
