[tool.poetry]
name = "ssl-relation-prediction"
version = "0.1.0"
description = ""
authors = ["SusanaPNunes <scnunes@fc.ul.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
ogb = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
